--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,12 @@
-body {
+main {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+
+ h1 {
+  text-align: center;
+ }
 
 .container {
   display: grid;
