--- a/styles.css
+++ b/styles.css
@@ -12,15 +12,29 @@ main {
   display: grid;
   grid-template-columns: repeat(4, 100px);
   grid-template-rows: repeat(6, 100px);
+  grid-gap: 2px;
+  border: solid black 1px;
+  border-radius: 5px;
 }
 
 .display {
   grid-column: 1/ -1;
   display: flex;
   justify-content: flex-end;
+  padding-right: 20px;
   align-items: center;
+  background-color: lightgray;
+  font-size: 2rem;
 }
 
 .zero {
   grid-column: 1 / 3;
+}
+
+.operator,
+.operand,
+.clear,
+.compute,
+.negative {
+  font-size: 2rem;
 }
